Fixed errors in aligning footer text to center

--- a/styles/index.css
+++ b/styles/index.css
@@ -7,7 +7,7 @@
 body {
     margin: 0;
 
-    min-width: 100vh;
+    min-height: 100dvh;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -46,6 +46,31 @@ header {
     text-decoration: none;
 }
 
+footer {
+    background-color: var(--primary-color);
+    text-align: center;
+    padding: 16px;
+}
+
+.social-media {
+    display: flex;
+    justify-content: space-around;
+    margin-bottom: 24px;
+}
+
+.social-media a i {
+    font-size: 24px;
+    color: #d9d9d9;
+}
+
+.info {
+    color:#d9d9d9;
+}
+
+.info p {
+    margin: 5px 0;
+}
+
 @media screen and (min-width: 600px) {
     header {
         display: flex;
@@ -66,30 +91,4 @@ header {
         margin-left: auto;
         margin-right: auto;
     }
-}
-
-footer {
-    background-color: var(--primary-color);
-    text-align: centre;
-    padding: 16px;
-
-}
-
-.social-media {
-    display: flex;
-    justify-content: space-around;
-    margin-bottom: 24px;
-}
-
-.social-media a i {
-    font-size: 24px;
-    color: #83695B;
-}
-
-.info {
-    color:#83695B;
-}
-
-.info p {
-    margin: 5px 0;
 }
